# Logistics-Portal

./: .env.example  README.md  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
app/apps/companies/: admin.py  forms.py  managers.py  middleware.py  models.py  selectors.py  services.py  validators.py
app/apps/companies/migrations/: 0001_initial.py  0002_alter_company_domain.py
app/apps/companies/tests/: conftest.py  test_company_services.py
app/apps/orders/: admin.py  forms.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
app/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0002_order_company.py  0003_alter_order_product.py  0003_remove_order_has_been_processed.py  0004_export.py  0004_order_has_been_processed.py  0005_export_company.py
app/apps/orders/tests/: conftest.py  test_apis.py  test_services.py  test_tasks.py
app/apps/products/: admin.py  forms.py  models.py  serializers.py  services.py  views.py
app/apps/products/migrations/: 0001_initial.py  0002_alter_product_sku.py
app/apps/products/tests/: conftest.py  test_apis.py  test_services.py
app/apps/users/: admin.py  apps.py  authentication.py  backends.py  forms.py  models.py  roles.py  services.py  signals.py
app/apps/users/migrations/: 0001_initial.py  0002_alter_profile_user.py  0003_alter_profile_user.py  0004_profile_is_blocked.py  0005_alter_profile_is_blocked.py
app/apps/users/tests/: conftest.py  test_services.py  test_signals.py
app/core/: settings.py  thread_locals.py  urls.py  views.py
app/core/management/commands/: seed_data.py
